--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Story Game</title>
-    <link rel="stylesheet" href="dreamintro.css">
+    <link rel="stylesheet" href="Index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.min.js"></script>
 
 <!-- 加载 Three.js 主库 -->
@@ -42,7 +42,7 @@
 
     </div>
         <!-- 3D 渲染 -->
-        <script src="dreamintro.js"></script>
+        <script src="Index.js"></script>
 </body>
 
 </html>
